--- a/src/content/a1/definite-indefinite-article.mdx
+++ b/src/content/a1/definite-indefinite-article.mdx
@@ -1,3 +1,118 @@
 # Definite/Indefinite Article
 
-New content.
+# Definite and Indefinite Articles in English
+
+Articles are small words that come before nouns. They help us understand whether we are talking about a specific thing or a general thing. In English, there are two main types of articles: **definite** and **indefinite**.
+
+## The Indefinite Articles: **A** and **An**
+
+We use **a** or **an** when we are talking about a singular, countable noun **for the first time** or when it is **not specific**.
+
+*   **A** is used before words that begin with a **consonant sound**.
+    *   Example: a cat, a dog, a university (sounds like "yoo-ni-ver-si-ty").
+*   **An** is used before words that begin with a **vowel sound** (a, e, i, o, u).
+    *   Example: an apple, an hour (the "h" is silent, so it sounds like "our"), an umbrella.
+
+**Key Rules for "A/An":**
+1.  **First Mention:** I saw **a** cat in the garden. (We don't know which cat yet).
+2.  **General Statement:** **A** doctor helps people. (Any doctor in general).
+3.  **Profession:** She is **an** engineer.
+4.  **One of Many:** Can I have **an** orange, please? (Any orange from the bowl).
+
+## The Definite Article: **The**
+
+We use **the** when we are talking about a **specific** noun that is **known** to the listener or reader.
+
+**Key Rules for "The":**
+1.  **Second Mention:** I saw **a** cat. **The** cat was black. (Now we know which cat).
+2.  **Unique Things:** **The** sun, **the** moon, **the** world.
+3.  **Superlatives:** He is **the** tallest boy in class.
+4.  **Specific Groups:** **The** rich, **the** poor, **the** elderly.
+5.  **Ordinal Numbers:** This is **the** first time.
+6.  **Specific Places:** We went to **the** cinema. (But: We went to school).
+7.  **With Adjectives:** **The** book on the table is mine. (Specifies which book).
+
+## No Article (Zero Article)
+
+We use **no article** with:
+*   **Plural and Uncountable Nouns in General:** I love **dogs**. She drinks **water**.
+*   **Names of People, Cities, Countries (usually):** **Maria** lives in **Berlin**, **Germany**.
+*   **Meals:** I had **breakfast** at 8 AM.
+*   **Institutions (home, work, school, university, church, hospital, prison) when we think about their primary purpose:** She is at **school**. (But: We visited **the** school to see the new library).
+
+---
+
+## Exercises
+
+### Exercise 1: Choose the correct article
+
+<Quiz answer="2">
+  I need to buy ___ new laptop.
+  <Option>a</Option>
+  <Option>an</Option>
+  <Option>the</Option>
+</Quiz>
+
+<Quiz answer="3">
+  Look at ___ moon! It's so bright tonight.
+  <Option>a</Option>
+  <Option>an</Option>
+  <Option>the</Option>
+</Quiz>
+
+<Quiz answer="1,3">
+  Which sentences use the article correctly? (Choose two)
+  <Option>He is an honest man.</Option>
+  <Option>She wants to be a astronaut.</Option>
+  <Option>Please pass me the salt.</Option>
+  <Option>I saw the interesting film yesterday.</Option>
+</Quiz>
+
+### Exercise 2: Fill in the blanks with A, An, The, or leave it blank (-)
+
+<FillBlanks>
+Yesterday, I met [a] man. [The] man was wearing [an] unusual hat. He told me he was [–] artist from [–] Italy. He invited me for [–] coffee at [a] small café near [the] river.
+</FillBlanks>
+
+### Exercise 3: Categorize the nouns
+
+<Grouping groups={{
+  "Use 'A' or 'An'": ["university", "hour", "one-way street", "European country"],
+  "Use 'The'": ["Amazon River", "first prize", "planet we live on", "middle of the room"],
+  "Use No Article": ["advice", "London", "John", "information"]
+}} />
+
+### Exercise 4: Complete the dialogue
+
+<Dialogue>
+
+  <Message speaker="Joanna" side="left">
+    Hi! I had an interesting idea.
+  </Message>
+  <Message speaker="John" side="right">
+    Really? What is it?
+  </Message>
+  <Message speaker="Joanna" side="left">
+    Let's go to the cinema tonight. I heard a new Marvel film is great.
+  </Message>
+  <Message speaker="John" side="right">
+    Good idea! But I need to finish the homework first. It will take me about an hour.
+  </Message>
+
+</Dialogue>
+
+<InlineBlanks>
+Anna: Hi! I had [an] interesting idea.
+Markus: Really? What is it?
+Anna: Let's go to [the] cinema tonight. I heard [the] new Marvel film is great.
+Markus: Good idea! But I need to finish [–] homework first. It will take me about [an] hour.
+</InlineBlanks>
+
+### Exercise 5: Arrange the rules in the correct order of explanation
+
+<Ordering items={[
+  "We start with indefinite articles 'a' and 'an' for non-specific, singular nouns.",
+  "We use 'a' before consonant sounds and 'an' before vowel sounds.",
+  "Then we introduce the definite article 'the' for specific or known nouns.",
+  "Finally, we explain cases where we use no article (zero article)."
+]} />
