--- a/src/content/a1/definite-indefinite-article.mdx
+++ b/src/content/a1/definite-indefinite-article.mdx
@@ -59,7 +59,11 @@ We use **no article** with:
   <Option>an</Option>
   <Option>the</Option>
 </Quiz>
+<AudioPhrase     >
 
+Articles are small words that come before nouns. They help us understand whether we are talking about a specific thing or a general thing. In English, there are two main types of articles: definite and indefinite.
+
+</AudioPhrase>
 <Quiz answer="1,3">
   Which sentences use the article correctly? (Choose two)
   <Option>He is an honest man.</Option>
