--- a/src/content/a1/tenses.mdx
+++ b/src/content/a1/tenses.mdx
@@ -1,3 +1,195 @@
-# Tenses
+# English Tenses: A Complete Guide
 
-New content.
+English has 12 primary tenses, divided into four main time frames: **Present**, **Past**, **Future**, and their **Perfect** and **Continuous** aspects. Understanding these tenses is crucial for expressing time, duration, and the relationship between actions.
+
+## 1. Present Tenses
+
+### 1.1 Present Simple
+Used for habits, general truths, fixed schedules, and permanent situations.
+*   **Form:** Subject + base verb (add -s/-es for he/she/it)
+*   **Example:** She **works** in a bank. / The sun **rises** in the east.
+
+### 1.2 Present Continuous (Present Progressive)
+Used for actions happening now, temporary situations, and future arrangements.
+*   **Form:** Subject + am/is/are + verb-ing
+*   **Example:** I **am reading** a book right now. / They **are visiting** us next week.
+
+### 1.3 Present Perfect
+Used for actions that happened at an unspecified time in the past, experiences, or actions that started in the past and continue to the present.
+*   **Form:** Subject + have/has + past participle
+*   **Example:** I **have seen** that movie. / He **has lived** here for ten years.
+
+### 1.4 Present Perfect Continuous
+Emphasizes the duration of an action that started in the past and continues to the present (or just stopped).
+*   **Form:** Subject + have/has been + verb-ing
+*   **Example:** She **has been studying** all morning. / It **has been raining**.
+
+## 2. Past Tenses
+
+### 2.1 Past Simple
+Used for completed actions at a specific time in the past.
+*   **Form:** Subject + verb in past simple (regular: -ed / irregular forms)
+*   **Example:** I **finished** my homework yesterday. / We **went** to Paris last summer.
+
+### 2.2 Past Continuous (Past Progressive)
+Used for actions that were in progress at a specific moment in the past, or to set the scene for another action.
+*   **Form:** Subject + was/were + verb-ing
+*   **Example:** I **was sleeping** when the phone rang. / At 8 PM, they **were having** dinner.
+
+### 2.3 Past Perfect
+Used for an action that was completed before another action or time in the past.
+*   **Form:** Subject + had + past participle
+*   **Example:** She **had already left** when I arrived. / After they **had eaten**, they went for a walk.
+
+### 2.4 Past Perfect Continuous
+Emphasizes the duration of an action that was completed before another past action.
+*   **Form:** Subject + had been + verb-ing
+*   **Example:** He **had been waiting** for an hour before the bus finally came.
+
+## 3. Future Tenses
+
+### 3.1 Future Simple (with "will")
+Used for spontaneous decisions, predictions, promises, and future facts.
+*   **Form:** Subject + will + base verb
+*   **Example:** I think it **will rain** tomorrow. / I **will help** you with that.
+
+### 3.2 Future with "going to"
+Used for plans, intentions, and predictions based on present evidence.
+*   **Form:** Subject + am/is/are going to + base verb
+*   **Example:** Look at those clouds! It **is going to rain**. / I **am going to visit** my grandparents.
+
+### 3.3 Future Continuous (Future Progressive)
+Used for actions that will be in progress at a specific time in the future.
+*   **Form:** Subject + will be + verb-ing
+*   **Example:** This time tomorrow, I **will be flying** to Madrid.
+
+### 3.4 Future Perfect
+Used for actions that will be completed before a specific time or another action in the future.
+*   **Form:** Subject + will have + past participle
+*   **Example:** By next year, I **will have finished** my degree.
+
+### 3.5 Future Perfect Continuous
+Emphasizes the duration of an action up to a specific point in the future.
+*   **Form:** Subject + will have been + verb-ing
+*   **Example:** In December, we **will have been living** here for five years.
+
+---
+
+# Practice: English Tenses
+
+## Exercise 1: Identify the Tense
+Choose the correct name for the tense used in each sentence.
+
+<Quiz answer="3">
+  What tense is used in the sentence: "She has been working here since 2020."
+  <Option>Present Simple</Option>
+  <Option>Past Perfect Continuous</Option>
+  <Option>Present Perfect Continuous</Option>
+  <Option>Future Perfect</Option>
+</Quiz>
+
+<Quiz answer="2">
+  What tense is used in the sentence: "They will have completed the project by Friday."
+  <Option>Future Simple</Option>
+  <Option>Future Perfect</Option>
+  <Option>Future Continuous</Option>
+  <Option>Present Perfect</Option>
+</Quiz>
+
+<Quiz answer="1,4">
+  Which tenses are used to talk about future plans? (Choose two)
+  <Option>Future with "going to"</Option>
+  <Option>Past Simple</Option>
+  <Option>Present Perfect</Option>
+  <Option>Present Continuous</Option>
+</Quiz>
+
+## Exercise 2: Fill in the Blanks
+Complete the sentences with the correct form of the verb in brackets.
+
+<FillBlanks>
+I usually [drink|drinks|drank] coffee in the morning. (Present Simple)
+</FillBlanks>
+
+<FillBlanks>
+Be quiet! The baby [is sleeping|sleeps|slept]. (Present Continuous)
+</FillBlanks>
+
+<FillBlanks>
+By the time you arrive, I [will have finished|finish|am finishing] cooking dinner. (Future Perfect)
+</FillBlanks>
+
+<FillBlanks>
+When I saw him, he [was reading|read|has read] a newspaper. (Past Continuous)
+</FillBlanks>
+
+<FillBlanks>
+She [had already eaten|already eats|has already eaten] before we invited her. (Past Perfect)
+</FillBlanks>
+
+## Exercise 3: Match the Tense with its Use
+Match the tense on the left with its correct description on the right.
+
+<Matching pairs={[
+  {left: "Present Simple", right: "Habits and general truths"},
+  {left: "Past Perfect", right: "An action completed before another past action"},
+  {left: "Future Continuous", right: "An action in progress at a specific future time"},
+  {left: "Present Perfect", right: "An experience at an unspecified time in the past"}
+]} />
+
+## Exercise 4: Choose the Correct Sentence
+Select the grammatically correct sentence for each tense.
+
+<Quiz answer="2">
+  Which sentence is correct for the Present Perfect Continuous?
+  <Option>I am living here for five years.</Option>
+  <Option>I have been living here for five years.</Option>
+  <Option>I lived here for five years.</Option>
+  <Option>I will live here for five years.</Option>
+</Quiz>
+
+<Quiz answer="3">
+  Which sentence correctly uses the Past Perfect?
+  <Option>After I ate, I had watched TV.</Option>
+  <Option>I had eaten after I watched TV.</Option>
+  <Option>After I had eaten, I watched TV.</Option>
+  <Option>I ate after I had watch TV.</Option>
+</Quiz>
+
+<Quiz answer="1">
+  Which sentence correctly uses "going to" for a future plan?
+  <Option>I am going to study medicine at university.</Option>
+  <Option>I will study medicine at university.</Option>
+  <Option>I study medicine at university.</Option>
+  <Option>I studied medicine at university.</Option>
+</Quiz>
+
+## Exercise 5: Categorize the Tenses
+Drag each example sentence into the correct time category.
+
+<Grouping groups={{
+  "Present Tenses": ["She writes novels.", "They are playing football.", "We have known each other for years."],
+  "Past Tenses": ["He finished his work early.", "I was cooking when you called.", "They had already left."],
+  "Future Tenses": ["It will rain later.", "She is going to travel to Japan.", "I will be waiting for you."]
+}} />
+
+## Exercise 6: Order the Timeline
+Put these sentences in the correct chronological order to tell a logical story.
+
+<Ordering items={[
+  "First, I woke up and had breakfast. (Past Simple)",
+  "While I was walking to the bus stop, it started to rain. (Past Continuous + Past Simple)",
+  "I realized I had forgotten my umbrella at home. (Past Perfect)",
+  "By the time I arrived at work, I had gotten completely wet. (Past Perfect)"
+]} />
+
+## Exercise 7: Complete the Dialogue
+Fill in the blanks in this conversation using the correct tense.
+
+<Dialogue>
+  <Message speaker="Anna" side="left">Hi Mark! What [are you doing|do you do|did you do] this weekend?</Message>
+  <Message speaker="Mark" side="right">Not sure yet. I think I [will visit|am visiting|visit] my parents. What about you?</Message>
+  <Message speaker="Anna" side="left">I [am going to see|will see|see] a new exhibition at the museum. I [have wanted|want|wanted] to see it for months!</Message>
+  <Message speaker="Mark" side="right">That sounds great. By the way, [did you finish|have you finished|do you finish] the report for Mr. Davis?</Message>
+  <Message speaker="Anna" side="left">Yes, I [had finished|finished|have finished] it before I left the office yesterday.</Message>
+</Dialogue># 
