--- a/src/content/a1/tenses.mdx
+++ b/src/content/a1/tenses.mdx
@@ -187,9 +187,29 @@ Put these sentences in the correct chronological order to tell a logical story.
 Fill in the blanks in this conversation using the correct tense.
 
 <Dialogue>
-  <Message speaker="Anna" side="left">Hi Mark! What [are you doing|do you do|did you do] this weekend?</Message>
-  <Message speaker="Mark" side="right">Not sure yet. I think I [will visit|am visiting|visit] my parents. What about you?</Message>
-  <Message speaker="Anna" side="left">I [am going to see|will see|see] a new exhibition at the museum. I [have wanted|want|wanted] to see it for months!</Message>
-  <Message speaker="Mark" side="right">That sounds great. By the way, [did you finish|have you finished|do you finish] the report for Mr. Davis?</Message>
-  <Message speaker="Anna" side="left">Yes, I [had finished|finished|have finished] it before I left the office yesterday.</Message>
+
+  <Message speaker="Anna" side="left">
+    <InlineBlanks>
+
+Hi Mark! What [are you doing|do you do|did you do] this weekend?
+
+</InlineBlanks>
+  </Message>
+  <Message speaker="Mark" side="right">
+    <InlineBlanks>
+
+Not sure yet. I think I [will visit|am visiting|visit] my parents. What about you?
+
+</InlineBlanks>
+  </Message>
+  <Message speaker="Anna" side="left">
+    I [am going to see|will see|see] a new exhibition at the museum. I [have wanted|want|wanted] to see it for months!
+  </Message>
+  <Message speaker="Mark" side="right">
+    That sounds great. By the way, [did you finish|have you finished|do you finish] the report for Mr. Davis?
+  </Message>
+  <Message speaker="Anna" side="left">
+    Yes, I [had finished|finished|have finished] it before I left the office yesterday.
+  </Message>
+
 </Dialogue># 
