--- a/src/content/a1/tenses.mdx
+++ b/src/content/a1/tenses.mdx
@@ -212,4 +212,4 @@ Not sure yet. I think I [will visit|am visiting|visit] my parents. What about yo
     Yes, I [had finished|finished|have finished] it before I left the office yesterday.
   </Message>
 
-</Dialogue># 
+</Dialogue>
