--- a/src/content/a1/tenses.mdx
+++ b/src/content/a1/tenses.mdx
@@ -188,28 +188,38 @@ Fill in the blanks in this conversation using the correct tense.
 
 <Dialogue>
 
-  <Message speaker="Anna" side="left">
-    <InlineBlanks>
+  <Message speaker="Anna" side="left" silent="true">
+    <InlineBlanks mode="picker">
 
+
+
+    
 Hi Mark! What [are you doing|do you do|did you do] this weekend?
 
+
+
+
 </InlineBlanks>
   </Message>
   <Message speaker="Mark" side="right">
-    <InlineBlanks>
-
-Not sure yet. I think I [will visit|am visiting|visit] my parents. What about you?
-
-</InlineBlanks>
-  </Message>
+<InlineBlanks mode="picker">
+    Not sure yet. I think I [will visit|am visiting|visit] my parents. What about you?
+</InlineBlanks>  
+</Message>
   <Message speaker="Anna" side="left">
+<InlineBlanks mode="picker">
     I [am going to see|will see|see] a new exhibition at the museum. I [have wanted|want|wanted] to see it for months!
-  </Message>
+</InlineBlanks>  
+</Message>
   <Message speaker="Mark" side="right">
+<InlineBlanks mode="picker">
     That sounds great. By the way, [did you finish|have you finished|do you finish] the report for Mr. Davis?
-  </Message>
+</InlineBlanks>  
+</Message>
   <Message speaker="Anna" side="left">
+<InlineBlanks mode="picker">
     Yes, I [had finished|finished|have finished] it before I left the office yesterday.
-  </Message>
+</InlineBlanks>  
+</Message>
 
 </Dialogue>
