--- a/src/content/a1/present-simple.mdx
+++ b/src/content/a1/present-simple.mdx
@@ -1,3 +1,16 @@
 # Present Simple
 
 New content.
+
+<InlineBlanks>
+
+Use [answer] for typing, or [answer|opt1|opt2] for picker options. Add hint:text for explanations. [answer|opt1|opt2|hint:text for explanations]
+
+</InlineBlanks>
+
+
+<FillBlanks>
+
+Use [answer] for typing, or [answer|opt1|opt2] for picker options. Add hint:text for explanations. [answer|opt1|opt2|hint:text for explanations]
+
+</FillBlanks>
